--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "aws-amplify": "^4.3.35",
     "aws-amplify-react-native": "^6.0.5",
     "expo": "~46.0.9",
+    "expo-google-app-auth": "~8.3.0",
     "expo-status-bar": "~1.4.0",
     "expo-updates": "~0.14.5",
     "react": "18.0.0",
